[package]
name = "tokio-lxi"
version = "0.1.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

description = "LXI protocol abstractions for Tokio"
documentation = "https://docs.rs/tokio-lxi"
homepage = "https://github.com/nthend/tokio-lxi"
repository = "https://github.com/nthend/tokio-lxi.git"
readme = "README.md"
keywords = ["lxi", "scpi", "tokio", "futures"]
categories = ["asynchronous", "network-programming"]
license = "MIT/Apache-2.0"

[dependencies]
tokio = "0.1.15"
