[package]
name = "tokio-lxi"
version = "0.2.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

description = "LXI protocol abstractions for Tokio"
documentation = "https://docs.rs/tokio-lxi"
homepage = "https://github.com/agerasev/tokio-lxi"
repository = "https://github.com/agerasev/tokio-lxi.git"
readme = "README.md"
keywords = ["lxi", "scpi", "tokio", "futures"]
categories = ["asynchronous", "network-programming"]
license = "MIT/Apache-2.0"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
futures-util = { version = "0.3.1", default-features = false, features = ["io"], optional = true }
tokio = { version = "0.2.9", default-features = false, features = ["io-util", "tcp"], optional = true }
async-std = { version = "1.4.0", optional = true }

[dev-dependencies]
tokio = { version = "0.2.9", features = ["full"] }

[features]
default = ["runtime-tokio"]
runtime-async-std = ["futures-util", "async-std"]
runtime-tokio = ["tokio"]
